--- a/app/assets/stylesheets/modules/layout.css.scss
+++ b/app/assets/stylesheets/modules/layout.css.scss
@@ -54,7 +54,7 @@ body {
     flex: 0 1 270px;
 
     &.is-master-overlay-parent-hidden {
-      flex: 0 1 820px;
+      flex: 0 1 auto;
       /* flex: 0 1 230px; */
     }
     /*
