--- a/app/assets/stylesheets/modules/typography.css.scss
+++ b/app/assets/stylesheets/modules/typography.css.scss
@@ -1,4 +1,4 @@
-a:link, a:visited {
+a, a:visited {
   color: #2980b9;
 
   &.close {
